--- a/tour.html
+++ b/tour.html
@@ -22,22 +22,49 @@
     </header>
 
     <main >
-      <div class="card">
+      <div class="card tour-card">
         <div class="flex">
         <!-- The following images are decorative for this project. -->
         <!-- Please see the project instructions for information on how to handle these. -->
           <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick">
-          <p class= "heading">Tour Dates</p>
+          <h2 class= "heading tour-heading">Tour Dates</h2>
           <img class="pick" src= "img/guitar_pick.png" alt="This is a guitar pick also">
-          <pre>
                 Date                             Venue                             Location
                 Mar 10 - 12                 The Warfield                  San Francisco, CA
                 Mar 20 - 23                 Pepsi Center                  Denver, CO
                 Apr 2 - 4                      Beacon Theatre             New York City, NY
                 Apr 10                         Paramount Theatre      Seattle, WA
-          </pre>
         </div>
       </div>
+      <div class="table">
+      <table>
+        <caption></caption>
+          <thead>
+            <tr>
+              <th scope="col">Concert</th>
+              <th scope="col">Date</th>
+              <th scope="col">Venue</th>
+              <th scope="col">Location</th>
+            </tr>
+          </thead>
+          <tbody>
+            <th >Concert #1</th>
+            <td>Mar 10 - 12</td>
+            <td>The Warfield</td>
+            <td >San Francisco, CA</td>
+          </tbody>
+          <tbody>
+            <th>Concert #2</th>
+            <td></td>
+            <td></td>
+          </tbody>
+          <tbody>
+            <th></th>
+            <th></th>
+            <th></th>
+          </tbody>
+      </table>
+    </div>
     </main>
     
     <footer>
